components/Watchlist/Watchlist.module.css
.sliderContent{
  /* display: flex;
  flex-direction: column;
  align-content: center; */
  /* height: 100%; */

}

/*https://stackoverflow.com/questions/49028877/slick-carousel-force-slides-to-have-the-same-height*/
.slick-track
{
    display: flex !important;
}

.slick-slide
{
    height: inherit !important;
}

.slick-slide > * {
  display: grid;
  place-items: center; 
}

.watchlistContainer {
  /* display: grid;
  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
  gap: 1rem; */
  list-style: none;
  display: flex;
  flex-direction: column;

}

.watchlistButton{
  background-color: rgb(115, 95, 50);
  border: 1px solid rgb(255, 255, 255);
  border-radius: 10px;
  text-align: center;
  padding: 1px 10px;
}

.watchlistHeader {
  text-align: center;
}

.watchlistMovieBox{
  margin: 10px;
  text-align: center;
  border: 1px solid rgb(0, 0, 0);
  border-radius: 10px;
  padding-top: 30px;   
}

/* .watchlistMovie {
  display: flex;
} */

.imageContainer {
  width: 30%;
  height: auto;
  border: 3px solid rgb(0, 0, 0);
  border-radius: 10px;
}


/* ul > .slick-dots{
  margin: 20px;
} */

.movieOnWatchlistTitle{
  height: auto;
  text-align: center;
  padding: 0.5rem;
  /* prevent dispositioning with very long titles: */
  overflow: hidden;
  height: 1.1rem;
  white-space: nowrap;
  text-overflow: ellipsis;
  /* prevent dispositioning with very long titles: */
}

.watchlistPoster {
  border-radius: 10px;
  border: 5px solid rgb(0, 0, 0);
  /* display: block; */
  /* margin-left: auto;
  margin-right: auto; */
  /* width: 50%; */
  width: auto;
}

.noMoviesOnWatchlist{
  margin: 20px;
}

.randomMovieOnWatchlistContainer{
  display: flex;
  flex-direction: column;
  margin:20px;
  justify-content: center;
  align-items: center;
  border: 1px solid rgb(0, 0, 0);
  border-radius: 10px;
  padding: 1em;
}

/*box shadow generator*/

